Empezamos con la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -7,16 +7,47 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="vendor/bootstrap-4.4.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 
-    <title>Bootstrap base proyecto</title>
+    <title>ProA Shop</title>
   </head>
   <body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+    <nav class="navbar navbar-expand-sm navbar-dark" role="navigation">
+      <a class="navbar-brand" href="#">ProA Shop</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Carga</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Venta</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <script src="vendor/jquery-3.5.0/jquery-3.5.0.min.js"></script>
     <script src="vendor/popper-2.3.3/popper.min.js"></script>
     <script src="vendor/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 
+    <header>
+      
+    </header>
     
+    <div class="container">
+      <div class="row">
+        <div class="col">
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
