--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="vendor/bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>ProA Shop</title>
+    <title>Proa Shop</title>
   </head>
   <body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
     <nav class="navbar navbar-expand-sm navbar-dark" role="navigation">
       <a class="navbar-brand" href="#">ProA Shop</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,15 +36,10 @@
     <script src="vendor/jquery-3.5.0/jquery-3.5.0.min.js"></script>
     <script src="vendor/popper-2.3.3/popper.min.js"></script>
     <script src="vendor/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
-
-    <header>
-      
-    </header>
-    
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col">
-
+        <div class="col-md-12">
+          <img src="img/LogoCompleto.png">
         </div>
       </div>
     </div>
