--- a/carga.html
+++ b/carga.html
@@ -57,9 +57,9 @@
                 <label for="pwd">Contraseña del administrador:</label>
                 <input type="Contraseña"  id="pwd">
               </div>
-              <div class="boton-modificado">
-                <button type="submit" class="btn btn-default">Aceptar</button>
-              </div>
+             
+              <button type="submit" class="btn btn-primary btn-block botonaso">Aceptar</button>
+ 
             </form>
           </div>
         </div>
