Creacion de pagina de ventas y estilo al boton

--- a/carga.html
+++ b/carga.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Carga</a>
+              <a class="nav-link active" href="#">Carga</a>
             </li>
             <li class="nav-item">
              <a class="nav-link" href="#">Venta</a>
