--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Inicio</a>
+            <a class="nav-link active" href="#">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Carga</a>
