--- a/carga.html
+++ b/carga.html
@@ -27,13 +27,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Inicio</a>
+              <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Carga</a>
             </li>
             <li class="nav-item">
-             <a class="nav-link" href="#">Venta</a>
+             <a class="nav-link" href="venta.html">Venta</a>
             </li>
           </ul>
         </div>
