--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <a class="nav-link active" href="#">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Carga</a>
+            <a class="nav-link" href="carga.html">Carga</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Venta</a>
+            <a class="nav-link" href="venta.html">Venta</a>
           </li>
         </ul>
       </div>
