--- a/venta.html
+++ b/venta.html
@@ -27,10 +27,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Inicio</a>
+              <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Carga</a>
+              <a class="nav-link" href="carga.html">Carga</a>
             </li>
             <li class="nav-item">
              <a class="nav-link active" href="#">Venta</a>
