--- a/venta.html
+++ b/venta.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="vendor/bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/ventastyles.css">
 
-    <title>Proa Shop</title>
+    <title>ProA Shop</title>
+    
+    <link rel="icon" type="image/png" href="img/favicon.ico">
     
   </head>
   <body>
@@ -40,10 +42,10 @@
      </nav>
     </div>
     <div class="content">
-      <img src="img/LogoCompleto.png">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
+            <img src="img/LogoCompleto.png">
             <form >
               <div class="form-group">
                 <label for="amount">Monto a cobrar:</label>
