--- a/carga.html
+++ b/carga.html
@@ -29,35 +29,35 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Inicio</a>
+              <a class="nav-link active" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Carga</a>
+              <a class="nav-link" href="carga.html">Carga</a>
             </li>
             <li class="nav-item">
-             <a class="nav-link" href="venta.html">Venta</a>
+              <a class="nav-link" href="venta.html">Venta</a>
             </li>
           </ul>
         </div>
-     </nav>
+      </nav>
     </div>
-    <div class="content">
+    <div class="content">.
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <img src="img/LogoCompleto.png">
-            <form >
+            <form>
               <div class="form-group">
                 <label for="amount">Monto a cargar:</label>
-                <input type="email" class="form-control" id="amount">
+                <input type="amount" class="form-control" id="amount">
               </div>
               <div class="form-group">
-                <label for="cardcode">Código de la tarjeta:</label>
-                <input type="cardcode" class="form-control" id="cardcode">
+                <label for="cardusername">Nombre de usuario (de la tarjeta):</label>
+                <input type="cardusername" class="form-control" id="cardusername">
               </div>
               <div class="form-group">
                 <label for="pwd">Contraseña del administrador:</label>
-                <input type="Contraseña"  id="pwd">
+                <input type="pwd" class="form-control" id="pwd">
               </div>
              
               <button type="submit" class="btn btn-primary btn-block botonaso">Aceptar</button>
