--- a/index.html
+++ b/index.html
@@ -20,25 +20,27 @@
     <script src="vendor/jquery-3.5.0/jquery-3.5.0.min.js"></script>
     <script src="vendor/popper-2.3.3/popper.min.js"></script>
     <script src="vendor/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
-    <nav class="navbar navbar-expand-sm navbar-dark" role="navigation">
-      <a class="navbar-brand" href="#">ProA Shop</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="carga.html">Carga</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="venta.html">Venta</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div class="navbar">
+      <nav class="navbar navbar-expand-sm navbar-dark" role="navigation">
+        <a class="navbar-brand" href="#">ProA Shop</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="carga.html">Carga</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="venta.html">Venta</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
     <div class="content">
       <div class="container-fluid">
         <div class="row">
